New object model

--- a/test.html
+++ b/test.html
@@ -8,4 +8,14 @@
     <script src = "jquery.domainsbot.js"></script>
 </head>
 
+<body>
+
+	<script>
+		var ret = $().domainsbot();
+		console.log(ret);
+		
+	</script>
+
+</body>
+
 </html>
