Obj model revision

--- a/test.html
+++ b/test.html
@@ -11,7 +11,8 @@
 <body>
 
 	<script>
-		var ret = $().domainsbot();
+		var ret = $().domainsbot({textbox:"cazzo"});
+		ret.search("cazzo");
 		console.log(ret);
 		
 	</script>
