Fixed checkout url

--- a/test.html
+++ b/test.html
@@ -35,7 +35,7 @@
 			   urlCheckout: "http://domainsbot.com/d/%domain%",
 			   onCheckout: function(domain,evt){alert(domain.Domain);},
 			   //onSuccess: function(data){alert(data)},
-			   parameters : {"database": "available", "pageSize" : 5},
+			   parameters : {"database": "sedomarket", "pageSize" : 5},
 			   onError: function(err){alert(err.message);},
 			   autoComplete: true
 			   });
