--- a/test.html
+++ b/test.html
@@ -6,6 +6,17 @@
 
     <!-- Fetch DomainsBot plugin  -->
     <script src = "jquery.domainsbot.js"></script>
+    
+    <style>
+	
+	#results>div{ background-color : whiteSmoke; }
+	#results>div>a {color: Black;}
+	#results>div>a:hover {color:Black;}
+	
+	
+	
+    </style>
+    
 </head>
 
 <body>
