--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
     <script src = "http://code.jquery.com/jquery-1.7.2.min.js"></script>
 
     <!-- Fetch DomainsBot plugin  -->
-    <script src = "jquery.domainsbot.js"></script>
+    <script src = "http://domainsbot.blob.core.windows.net/javascript/jquery.domainsbot-1.0.min.js"></script>
 
     <style type="text/css">
         #results>div>a {color: Black;}
@@ -19,8 +19,8 @@
 <input type="text" id="search_box" />
 <input type="button" id="search_button" value="Search"/>
 
-<div id="loader"><img src="http://www.domainsbot.com/Content/img/icons/more_loader.gif"></div>
-<div id="checking"><img src="http://www.domainsbot.com/Content/img/icons/ajax-loader.gif"></div>
+<div id="loader"><img src="http://domainsbot.blob.core.windows.net/img/loading.gif" alt="Loading.."></div>
+<div id="checking"><img src="http://domainsbot.blob.core.windows.net/img/checking.gif" alt="Checking.."></div>
 <br/>
 <br/>
 <div id="results"></div>
