--- a/test.html
+++ b/test.html
@@ -17,6 +17,11 @@
 
 <body>
 
+<!-- Fetch DomainsBot plugin  -->
+
+
+<br/>
+<br/>
 <input type="text" id="search_box" />
 <input type="button" id="search_button" value="Search"/>
 
@@ -37,7 +42,7 @@
             searchTextbox : "#search_box",
             searchSubmit : "#search_button",
             searchParameter: "domain",
-            parameters : {"pageSize" : 5, "auth-token": "PUT-YOUR-API-KEY-HERE", "tlds" : "com,co,net,me"},
+            parameters : {"pageSize" : 5, "auth-token": "auto-godaddy", "tlds" : "com,co,net,me"},
 
             autoComplete: true,
 
