SSL support for availability check

--- a/test.html
+++ b/test.html
@@ -48,7 +48,7 @@
             searchParameter: "domain",
             autoComplete: true,
             // Events
-            urlCheckout: "http://domainsbot.com/d/%domain%"
+            urlCheckout: "http://domainsbot.com/d/%domain%" //Replace with your check out url!
             //onCheckout: function(domain,evt){alert(domain.Domain);}
 
             //onSuccess: function(data){alert(data)},
