--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
     <script src = "http://code.jquery.com/jquery-1.7.2.min.js"></script>
 
     <!-- Fetch DomainsBot plugin  -->
-    <script src = "http://domainsbot.blob.core.windows.net/javascript/jquery.domainsbot-1.0.min.js"></script>
+    <script src = "https://domainsbot.blob.core.windows.net/javascript/jquery.domainsbot-1.0.min.js"></script>
 
     <style type="text/css">
         #results>div>a {color: Black;}
